[gd_scene load_steps=10 format=3 uid="uid://b53cbt5nex17b"]

[ext_resource type="Script" path="res://scripts/players_register.gd" id="1_xssul"]
[ext_resource type="PackedScene" uid="uid://bhv61p8wqqqlh" path="res://scenes/transition.tscn" id="2_7ihi3"]
[ext_resource type="PackedScene" uid="uid://dx4mnm01wxkgx" path="res://scenes/random_background.tscn" id="3_n2v8l"]
[ext_resource type="Theme" uid="uid://cc51a4y3vvhva" path="res://themes/poppin-light.tres" id="4_gwjdf"]
[ext_resource type="Theme" uid="uid://5cftpimujwbs" path="res://themes/lo-fi.tres" id="4_ys833"]
[ext_resource type="Texture2D" uid="uid://djvsngfd8vxco" path="res://assets/images/GUI/Green.png" id="5_ols20"]
[ext_resource type="Texture2D" uid="uid://c7pionar5citr" path="res://assets/images/GUI/GreenPressed.png" id="6_eqpdx"]
[ext_resource type="Texture2D" uid="uid://77rsr7jqruhh" path="res://assets/images/GUI/Green-hover.png" id="7_fbhe3"]
[ext_resource type="AudioStream" uid="uid://q2gbs4jxjh21" path="res://assets/sounds/effects/UI Soundpack/OGG/Modern3.ogg" id="7_okasx"]

[node name="PlayersRegister" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xssul")

[node name="Transition" parent="." instance=ExtResource("2_7ihi3")]

[node name="BG" parent="." instance=ExtResource("3_n2v8l")]
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 48

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_ys833")
theme_override_font_sizes/font_size = 32
text = "Nome do player que jogara com X"
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_gwjdf")
theme_override_font_sizes/font_size = 24
text = "Jogador Um"
placeholder_text = "Digite seu nome"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("4_ys833")
theme_override_font_sizes/font_size = 32
text = "Nome do player que jogara com circulo"
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("4_gwjdf")
theme_override_font_sizes/font_size = 24
text = "Jogador Dois"
placeholder_text = "Digite seu nome"

[node name="PlayButton" type="TextureButton" parent="MarginContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture_normal = ExtResource("5_ols20")
texture_pressed = ExtResource("6_eqpdx")
texture_hover = ExtResource("7_fbhe3")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/PlayButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -34.0
offset_right = 76.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_ys833")
text = "JOGAR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonSounds" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_okasx")

[connection signal="button_up" from="MarginContainer/PlayButton" to="." method="_on_play_button_button_up"]
